--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,16 @@
-twilio.account_sid=AC2ce82a1655dbb32111efcf2998a9bc83
-twilio.auth_token=894f633219f0cda30c9c4a6c8da85778
-twilio.service_sid=VAdbd3cd8b373f71619bbe827d41bd36f3
+# Database Configuration
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/hospital
+spring.datasource.username=root
+spring.datasource.password=1209
+
+# Hibernate Properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.mail.host=smtp.yourprovider.com
+spring.mail.port=587
+spring.mail.username=your-email@example.com
+spring.mail.password=your-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
