--- a/build.gradle
+++ b/build.gradle
@@ -43,9 +43,7 @@ dependencies {
     implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.7.5'
 
 
-    implementation 'com.twilio.sdk:twilio:9.15.0'
-
-    implementation 'jakarta.annotation:jakarta.annotation-api:3.0.0'
+    implementation 'org.springframework.mail:spring-mail:5.3.23'
 
 
 
