--- a/build.gradle
+++ b/build.gradle
@@ -42,11 +42,10 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
     implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.7.5'
 
+    implementation 'jakarta.annotation:jakarta.annotation-api:3.0.0'
 
-    implementation 'org.springframework.mail:spring-mail:5.3.23'
-
-
-
+// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
+    implementation("org.springframework.boot:spring-boot-starter-mail:2.7.3")
 }
 
 test {
