--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,13 @@ spring.datasource.password=1209
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-spring.mail.host=smtp.yourprovider.com
+# application.properties
+spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=your-email@example.com
-spring.mail.password=your-password
+spring.mail.username=your_email@gmail.com
+spring.mail.password=your_app_password
+
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.default-encoding=UTF-8
+
