--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,8 @@ dependencies {
 
 // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
     implementation("org.springframework.boot:spring-boot-starter-mail:2.7.3")
+    implementation 'commons-fileupload:commons-fileupload:1.5'
+
 }
 
 test {
