--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.mail.username=testDuAnBenhVien@gmail.com
 spring.mail.password=nbxpkfqfbcafqwij
 
+# Upload file
+upload_file = A:\\Hospital\\src\\main\\resources\\static\\images\\avatar\\
+
 
 
