fix default image

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,5 @@ spring.mail.password=nbxpkfqfbcafqwij
 upload_file = A:\\Hospital\\src\\main\\resources\\static\\images\\avatar\\
 
 
-
+# Insert Data
+spring.datasource.initialization-mode=always
